--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="btn_clear">CLEAR</string>
     <string name="btn_edit_course">EDIT COURSE</string>
     <string name="btn_submit">SUBMIT</string>
+    <string name="action_about">About</string>
 </resources>
